--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -1,7 +1,7 @@
 // Base
 @import "variables.less";
 @import "breakpoints.less";
-@import "images.less";
+@import "../common/images.less";
 @import "variables.less";
 @import "nav.less";
 
