--- a/assets/less/tbpro/product/appointment.less
+++ b/assets/less/tbpro/product/appointment.less
@@ -1,5 +1,5 @@
 @import "../breakpoints.less";
-@import "../images.less";
+@import "../../common/images.less";
 @import "../../common/space.less";
 @import "../nav.less";
 
