Font styles for header and letter body

--- a/assets/less/common/fonts.less
+++ b/assets/less/common/fonts.less
@@ -9,6 +9,7 @@
 // Families
 @family-metropolis: 'Metropolis', sans-serif;
 @family-inter: 'Inter', sans-serif;
+@family-open-sans: 'Open Sans', sans-serif;
 
 // Mixins
 .mixin-font-styles(@family, @weight: normal, @size: 1rem, @line-height: 1, @letter-spacing: normal) {
