--- a/assets/less/appeals/nov25.less
+++ b/assets/less/appeals/nov25.less
@@ -26,6 +26,7 @@
 
 @import "../common/fonts.less";
 
+*, *::before, *::after { box-sizing: border-box; }
 
 :root {
     --color-appeal-main-bg: var(--color-white);
@@ -38,6 +39,8 @@
 
     --font-content: Open Sans, system-ui, sans-serif;
     --min-small-screen: 23.438rem;
+
+
 
 }
 
@@ -132,12 +135,14 @@ main {
             }
 
             span {
+                // Undo styles for gradient text.
                 background: unset;
                 background-clip: unset;
                 display: block;
                 filter: unset;
 
                 color: #dceefb;
+                font-size: 3.375rem;
                 font-weight: 600;
                 text-shadow: 0px 2px 3px #0000004c;
             }
@@ -147,7 +152,8 @@ main {
 
         .letter-container {
             background: var(--color-appeal-main-bg);
-
+            padding-inline: 2.6875rem;
+            padding-bottom: 1rem;
             @media (min-width: @sm) {
                 border: 0.063rem solid var(--color-appeal-bg-border);
                 border-radius: 0.75rem;
@@ -167,12 +173,15 @@ main {
 
 
             p {
+                .mixin-font-styles(
+                    @family-open-sans,
+                    normal,
+                    1.375rem,
+                    1.5
+                );
+
+
                 width: 100%;
-                font-size: 1.125rem;
-                // margin: 0 0 1.5rem;
-                @media (min-width: @md) {
-                    font-size: 1.5rem;
-                }
             }
 
             /* Declaring this style here, as it has more precedence. */
