Create and style the Mozilla footer

--- a/assets/less/appeals/nov25.less
+++ b/assets/less/appeals/nov25.less
@@ -25,6 +25,7 @@
 // @import "../new/components/updates-footer.less";
 
 @import "../common/fonts.less";
+@import "../common/moz-footer.less";
 
 *, *::before, *::after { box-sizing: border-box; }
 
