Change nav CTA text

--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -219,8 +219,10 @@ body {
             }
             li.nav-item-join-button {
                 align-self: flex-end;
-                margin-left: 2rem;
+                margin-left: 1.5rem;
+                margin-block: 0.5rem;
                 @media (min-width: @lg) {
+                    margin-block: unset;
                     margin-left: unset;
                 }
             }
