Draft waitlist form page

--- a/sites/tb.pro/includes/base/page.html
+++ b/sites/tb.pro/includes/base/page.html
@@ -60,18 +60,14 @@
     </header>
 
     {% block features %}{% endblock %}
-
   </div>
 
   {% block overview %}
     {# Individual product overviews. #}
   {% endblock %}
 
-  <div class="top-level">
-    <section id="reasons" class="primary-block">
-      {% block reasons %}{% endblock %}
-    </section>
-  </div>
+  {% block reasons %}
+  {% endblock %}
 
   {% block testimonials %}
   {% endblock %}
