Update waitlist form, nov25b text, link sign-in, add send bentos

--- a/assets/less/tbpro/waitlist.less
+++ b/assets/less/tbpro/waitlist.less
@@ -52,6 +52,10 @@ body {
         color: #1373d9;
     }
 
+    #waitlist-welcome {
+        margin-bottom: 3rem;
+    }
+
     .form-elements {
         display: flex;
         flex-direction: column;
