--- a/sites/tb.pro/includes/base/page.html
+++ b/sites/tb.pro/includes/base/page.html
@@ -49,7 +49,9 @@
               <a id="nav-link-send" href="{{ url('tbpro.send') }}">Send</a>
             </li>
             <li class="nav-item-join-button">
-              <button class="button-brand-small-outline-label">Sign in</button>
+              <form class="bolt-button-wrapper" action="https://accounts.tb.pro/login/">
+                <button class="button-brand-small-outline-label">Sign in</button>
+              </form>
             </li>
           </ul>
         </div>
