add missing images, switch to high-res sooner for thundermail hero

--- a/assets/less/tbpro/product/thundermail.less
+++ b/assets/less/tbpro/product/thundermail.less
@@ -55,7 +55,7 @@ header#masthead {
         aspect-ratio: 1.9/1;
 
         width: 100%;
-        @media (min-width: @lg) {
+        @media (min-width: @md) {
             .mixin-background-image('/media/img/tbpro/xl-thundermail-hero');
             aspect-ratio: 2.69/1;
         }
