--- a/assets/less/tbpro/product/appointment.less
+++ b/assets/less/tbpro/product/appointment.less
@@ -56,7 +56,7 @@ header#masthead {
         width: 100%;
         .mixin-background-image('/media/img/tbpro/xs-appointment-hero');
 
-        @media (min-width: @lg) {
+        @media (min-width: @md) {
             .mixin-background-image('/media/img/tbpro/xl-appointment-hero');
             aspect-ratio: 2.39/1;
             max-width: 970px;
