--- a/assets/less/tbpro/waitlist.less
+++ b/assets/less/tbpro/waitlist.less
@@ -35,7 +35,7 @@ body {
 #waitlist-form {
     color: #4c4d58;
     height: 100%;
-    padding-top: 2rem;
+    // padding-top: 2rem;
 
     @media (min-width: @lg) {
         margin-inline: 1rem;
@@ -53,7 +53,7 @@ body {
     }
 
     #waitlist-welcome {
-        margin-bottom: 3rem;
+        margin-bottom: 2rem;
     }
 
     .form-elements {
@@ -123,6 +123,7 @@ body {
         .buttons {
             display: flex;
             justify-content: flex-end;
+            margin-block: 1rem;
             width: 100%;
         }
     }
