Make corrections to the waitlist form

--- a/sites/tb.pro/includes/macros/right-arrow-submit-button.html
+++ b/sites/tb.pro/includes/macros/right-arrow-submit-button.html
@@ -1,4 +1,4 @@
-{% macro right_arrow_submit_button(button_label, target_url, additional_classes) -%}
+{% macro right_arrow_submit_button(button_label, additional_classes) -%}
 <button class="button-brand-filled-label-icon  {{ additional_classes }}" name="submit" type="submit">
   {{ button_label }}
 
